# CodeSync

./: .dockerignore  .env.docker.example  .vercelignore  BACKEND_ARCHITECTURE.md  Dockerfile  README.md  compose.yaml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
lessons/: cicd.md  docker.md
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  RUNNER.md
server/migrations/: 20260530174156_create_users_table.sql  20260530174157_create_sessions_table.sql  20260530174158_create_edit_history_table.sql  20260716110732_create_chat_messages_table.sql
server/src/: config.rs  main.rs  main.rs.save  state.rs
server/src/ai/: groq.rs
server/src/db/: mod.rs
server/src/errors/: mod.rs
server/src/middleware/: auth.rs
server/src/models/: session.rs  user.rs
server/src/routes/: auth.rs  compile.rs  health.rs  mod.rs  repositories.rs  sessions.rs
server/src/ws/: handler.rs  messages.rs  session.rs
src/: main.rs.save  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/app/session/[id]/: page.tsx
src/components/ai/: AiMessage.tsx  AiPanel.tsx
src/components/editor/: CursorLayer.tsx
src/components/layout/: Navbar.tsx
src/components/session/: ChatPanel.tsx  CreateSession.tsx  RepositoryPanel.tsx  UserPresence.tsx
src/components/ui/: dialog.tsx  resizable.tsx  sheet.tsx
src/hooks/: useAuth.ts  useEditor.ts  useWebSocket.ts
src/lib/: api.ts  ws-messages.ts
src/store/: aiStore.ts  chatStore.ts  sessionStore.ts
src/types/: index.ts
